<resources>

    <string name="app_name">Ghost Mock</string>

    <string name="menu_option">Option</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_save">Save</string>
    <string name="menu_add">Add</string>
    <string name="menu_send">Send</string>
    <string name="menu_done">Done</string>

    <string name="title_nearby_objects">Nearby objects</string>
    <string name="title_option">Options</string>
    <string name="title_open_source_libraries">Open source libraries</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="title_settings">Settings</string>
    <string name="title_my_objects">My objects</string>
    <string name="title_filter">Filter</string>

    <string name="chip_google">Google</string>
    <string name="chip_altla">Altla</string>

    <string name="textView_url">URL</string>
    <string name="textView_altla">altla</string>
    <string name="textView_areas">Areas</string>
    <string name="textView_nearby_objects">Nearby objects</string>
    <string name="textView_area">Area</string>
    <string name="textView_area_services">Services</string>
    <string name="textView_object_management">Object management</string>
    <string name="textView_settings">Settings</string>
    <string name="textView_no_image">NO IMAGE</string>
    <string name="textView_send_feedback">Send feedback</string>
    <string name="textView_terms_of_service">Terms of Service</string>
    <string name="textView_open_source_libraries">Open source libraries</string>
    <string name="textView_privacy_policy">Privacy policy</string>
    <string name="textView_format_distance">%d m</string>
    <string name="textView_location">Location</string>
    <string name="textView_preview">Preview</string>
    <string name="textView_type_url">Type URL</string>
    <string name="textView_feedback">Send an issue or share your ideas.</string>
    <string name="textView_empty_title_nearby_objects">No nearby objects</string>
    <string name="textView_empty_body_nearby_objects">Tap on the search icon to search nearby objects.</string>
    <string name="textView_label_type">Type</string>

    <string name="transition_imageView">transitionImageView</string>
    <string name="transition_textView">transitionTextView</string>

    <string name="url_privacy_policy">http://www.legendapl.com/privacypolicy.html</string>

    <string name="hint_url">URL*</string>

    <string name="textView_select_location">Select location</string>
    <string name="title_create_object">Create an object</string>

    <string name="error_required">Required.</string>
    <string name="error_incorrect_url">Incorrect URL.</string>

    <string name="button_show_preview">Show preview</string>
    <string name="button_select_location">Select location</string>

    <string name="rationale_location">This app would like to access this device\'s location to search places.</string>

    <string name="dummy">dummy</string>

    <string name="snackbar_removed">Removed.</string>
    <string name="snackbar_saved">Saved.</string>
    <string name="snackbar_feedback_reply">Thank you for the feedback.</string>

    <string name="snackbar_action_undo">Undo</string>

</resources>
