<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.OthersActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutObjectManagement"
        android:layout_width="0dp"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <!--<ImageView-->
        <!--android:id="@+id/imageViewEditLocation"-->
        <!--android:layout_width="32dp"-->
        <!--android:layout_height="32dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:src="@drawable/ic_link"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

        <!--<TextView-->
        <!--android:id="@+id/textViewObjectManagement"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginStart="72dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:text="@string/textView_object_management"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.5" />-->

        <TextView
            android:id="@+id/textViewObjectManagement"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/textView_object_management"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutSettings"
        android:layout_width="0dp"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutObjectManagement">

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/textView_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <!--<ImageView-->
        <!--android:id="@+id/imageViewSettings"-->
        <!--android:layout_width="32dp"-->
        <!--android:layout_height="32dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:src="@drawable/ic_settings"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

        <!--<TextView-->
        <!--android:id="@+id/textViewSettings"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginStart="72dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:text="@string/textView_settings"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.5" />-->

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutFeedback"
        android:layout_width="0dp"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettings">

        <!--<ImageView-->
        <!--android:id="@+id/imageViewFeedback"-->
        <!--android:layout_width="32dp"-->
        <!--android:layout_height="32dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:src="@drawable/ic_feedback"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

        <!--<TextView-->
        <!--android:id="@+id/textViewFeedback"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginStart="72dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:text="@string/textView_send_feedback"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/textViewFeedback"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/textView_send_feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>